# local-agent-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ACP_Concept_Summary.md  PACT_Specification.md
src/local_agent_kit/: __init__.py  agent.py  cli.py  hardware.py
src/local_agent_kit/channels/: __init__.py  base.py  cli_channel.py  telegram_channel.py
src/local_agent_kit/search/: __init__.py  base.py  duckduckgo_search.py  gemini_search.py
